# mcp-audit

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
blog/: essay-urlparse-is-not-a-guard.md
docs/: checks.md
scripts/: run-demo.sh
src/mcp_audit/: __init__.py  __main__.py  cli.py  client.py  report.py  runner.py
src/mcp_audit/checks/: __init__.py  base.py  dependencies.py  source_code.py  tool_schema.py
tests/: benign_server.py  test_cli.py  test_dependency_check.py  test_smoke.py  test_source_checks.py
vulnerable_mcp/: README.md  __init__.py  pyproject.toml  server.py
