[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "velox-mcp-audit"
version = "0.2.0"
description = "Security scanner for Model Context Protocol (MCP) servers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Velox Labs" }
]
keywords = ["mcp", "security", "scanner", "llm", "agent", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "mcp>=1.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
mcp-audit = "mcp_audit.cli:app"

[project.urls]
Homepage = "https://veloxlabs.dev"
Repository = "https://github.com/veloxlabsio/mcp-audit"
Issues = "https://github.com/veloxlabsio/mcp-audit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_audit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
